positioned inner-content absolutely within relatively positioned wrapper (with overflow: hidden to prevent user from scrolling right to where the links are hiding) q

--- a/style.css
+++ b/style.css
@@ -839,6 +839,7 @@ footer p {
 
     .inner-content {
       width: 1024px;
+      margin-left: -512px;
     }
 
     .stripe {
@@ -978,6 +979,7 @@ footer p {
 
     .inner-content {
       width: 768px;
+      margin-left: -384px;
     }
 
     .home h1 {
@@ -1199,6 +1201,7 @@ footer p {
       .inner-content {
         width: 374px;
         padding: 0 2rem 1rem 2rem;
+        margin-left: -187px;
       }
 
       .home {
@@ -1252,7 +1255,7 @@ footer p {
       nav {
         position: absolute;
         right: 0;
-        bottom: 16rem;
+        top: 16rem;
       }
 
       nav ul {
@@ -1539,6 +1542,7 @@ footer p {
 
         .inner-content {
           width: 320px;
+          margin-left: -160px;
         }
 
         section {
@@ -1663,6 +1667,7 @@ footer p {
     .inner-content {
       width: 666px;
       padding: 0 2rem;
+      margin-left: -333px;
     }
 
     section {
@@ -1900,6 +1905,7 @@ footer p {
 
       .inner-content {
         width: 812px;
+        margin-left: -406px;
       }
 
       p.mobile-text {
@@ -1922,6 +1928,7 @@ footer p {
 
       .inner-content {
         width: 844px;
+        margin-left: -422px;
       }
 
       p.mobile-text {
@@ -1944,6 +1951,7 @@ footer p {
 
       .inner-content {
         width: 896px;
+        margin-left: -448px;
       }
 
       p.mobile-text {
